tests/macros/raw_select/filter_async.stderr
error: option `filter_async` does not exist for kind `raw_select`
 --> $DIR/filter_async.rs:2:55
  |
2 |     let q = inquisition::questions![RawSelect { async filter: todo!() }];
  |                                                       ^^^^^^
