tests/macros/raw_select/filter_async.rs
fn main() {
    let q = inquisition::questions![RawSelect { async filter: todo!() }];
}
